Aura - Toggle Button | fix background and patch icon-label alignment (dark)

--- a/themes/aura/aura-dark/extensions/_togglebutton.scss
+++ b/themes/aura/aura-dark/extensions/_togglebutton.scss
@@ -1,4 +1,7 @@
 .p-togglebutton {
+    &.p-button {
+        padding: .25rem;
+    }
     .p-button {
         .p-button-label,
         .p-button-icon {
@@ -29,13 +32,53 @@
         }
     }
 
+    &.p-highlight {
+        .p-button-label {
+            background: $shade800;
+            border-color: $shade800;
+            box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.02), 0px 1px 2px 0px rgba(0, 0, 0, 0.04);
+            border-radius:4px;
+        }
+
+        &:has(.p-button-icon) {
+            .p-button-icon {
+                margin-right: 0;
+                padding: .1rem 0 0.1rem .25rem;
+                background: $shade800;
+                box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.02), -2px 2px 2px 0px rgba(0, 0, 0, 0.04);
+                border: none;
+                border-radius: 4px 0px 0px 4px;
+            }
+            
+            .p-button-label {
+                background: $shade800;
+                box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.02), 2px 2px 2px 0px rgba(0, 0, 0, 0.04);
+                border-radius: 0px 4px 4px 0px;
+            }
+            
+        }
+    }
+
+    &:has(:not(.p-highlight)) {
+        &:has(.p-button-icon) {
+            .p-button-icon {
+                margin-right: 0;
+                padding: .1rem 0 0.1rem .25rem;
+                border: none;
+                border-radius: 4px 0px 0px 4px;
+            }
+
+            .p-button-label {
+                border-radius: 0px 4px 4px 0px;
+            }
+        }
+    }
+
     &.p-disabled {
         opacity: 1;
-        .p-button {
+        color: $shade500;
+        .p-button-icon {
             color: $shade500;
-            .p-button-icon {
-                color: $shade500;
-            }
         }
     }
 }
